--- a/reality/Dockerfile
+++ b/reality/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:alpine as builder
 LABEL maintainer="wulabing <wulabing@gmail.com>"
 
 
-ENV GOPROXY=https://goproxy.cn,direct
+#ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /app
 
 RUN apk add --no-cache git && git clone https://github.com/XTLS/Xray-core.git . && \
@@ -29,7 +29,7 @@ COPY ./config.json /
 
 COPY --from=builder /app/xray /
 
-RUN apk add --no-cache tzdata ca-certificates jq && \
+RUN apk add --no-cache tzdata ca-certificates jq curl && \
     mkdir -p /var/log/xray &&\
     wget -O /geosite.dat https://github.com/v2fly/domain-list-community/releases/latest/download/dlc.dat && \
     wget -O /geoip.dat https://github.com/v2fly/geoip/releases/latest/download/geoip.dat && \
