--- a/.github/workflows/xray_docker_reality.yml
+++ b/.github/workflows/xray_docker_reality.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           context: ./reality
           file: ./reality/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           tags: |
             wulabing/xray_docker_reality:${{env.TAG_NAME}}
             wulabing/xray_docker_reality:latest
