--- a/reality/Dockerfile
+++ b/reality/Dockerfile
@@ -6,7 +6,7 @@ LABEL maintainer="wulabing <wulabing@gmail.com>"
 #ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /app
 
-RUN apk add --no-cache git libqrencode && git clone https://github.com/XTLS/Xray-core.git . && \
+RUN apk add --no-cache git  && git clone https://github.com/XTLS/Xray-core.git . && \
     go mod download && \
     go build -o xray /app/main/
 
@@ -29,7 +29,7 @@ COPY ./config.json /
 
 COPY --from=builder /app/xray /
 
-RUN apk add --no-cache tzdata ca-certificates jq curl && \
+RUN apk add --no-cache tzdata ca-certificates jq curl libqrencode && \
     mkdir -p /var/log/xray &&\
     wget -O /geosite.dat https://github.com/v2fly/domain-list-community/releases/latest/download/dlc.dat && \
     wget -O /geoip.dat https://github.com/v2fly/geoip/releases/latest/download/geoip.dat && \
