--- a/reality/Dockerfile
+++ b/reality/Dockerfile
@@ -20,6 +20,8 @@ ENV SERVERNAMES=""
 ENV PRIVATEKEY=""
 ENV SHORTIDS=""
 ENV NETWORK=""
+ENV INTERNAL_PORT=""
+ENV HOSTMODE_PORT=""
 ENV TZ=Asia/Shanghai
 
 WORKDIR /
@@ -35,5 +37,6 @@ RUN apk add --no-cache tzdata ca-certificates jq curl libqrencode && \
     wget -O /geoip.dat https://github.com/v2fly/geoip/releases/latest/download/geoip.dat && \
     chmod +x /entrypoint.sh
 
-EXPOSE 443
+
 ENTRYPOINT ["./entrypoint.sh"]
+EXPOSE 443
