--- a/reality/Dockerfile
+++ b/reality/Dockerfile
@@ -1,7 +1,7 @@
 # builder
 FROM golang:alpine as builder
 LABEL maintainer="wulabing <wulabing@gmail.com>"
-LABEL version="0.0.22"
+LABEL version="0.0.23"
 
 
 #ENV GOPROXY=https://goproxy.cn,direct
@@ -32,7 +32,7 @@ COPY ./config.json /
 
 COPY --from=builder /app/xray /
 
-RUN apk add --no-cache tzdata ca-certificates jq curl libqrencode && \
+RUN apk add --no-cache tzdata ca-certificates jq curl libqrencode-tools && \
     mkdir -p /var/log/xray &&\
     wget -O /geosite.dat https://github.com/v2fly/domain-list-community/releases/latest/download/dlc.dat && \
     wget -O /geoip.dat https://github.com/v2fly/geoip/releases/latest/download/geoip.dat && \
