--- a/reality/Dockerfile
+++ b/reality/Dockerfile
@@ -1,18 +1,21 @@
 # builder
-FROM golang:alpine as builder
+FROM golang:alpine AS builder
 LABEL maintainer="wulabing <wulabing@gmail.com>"
-LABEL version="0.0.24"
+LABEL version="0.0.25"
 
 
 #ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /app
 
-RUN apk add --no-cache git  && git clone https://github.com/XTLS/Xray-core.git . && \
+RUN apk add --no-cache git curl jq && \ 
+    LATEST_VERSION_TAG=$(curl -s https://api.github.com/repos/XTLS/Xray-core/releases | jq -r '.[0].tag_name') && \
+    git clone https://github.com/XTLS/Xray-core.git . && \
+    git checkout $LATEST_VERSION_TAG && \
     go mod download && \
     go build -o xray /app/main/
 
 # runner
-FROM alpine:latest as runner
+FROM alpine:latest AS runner
 
 
 ENV UUID=""
