--- a/reality/Dockerfile
+++ b/reality/Dockerfile
@@ -1,7 +1,7 @@
 # builder
 FROM golang:alpine AS builder
 LABEL maintainer="wulabing <wulabing@gmail.com>"
-LABEL version="0.0.26"
+LABEL version="0.0.27"
 
 
 #ENV GOPROXY=https://goproxy.cn,direct
@@ -11,8 +11,8 @@ RUN apk add --no-cache git curl jq && \
     LATEST_VERSION_TAG=$(curl -s https://api.github.com/repos/XTLS/Xray-core/releases | jq -r '.[0].tag_name') && \
     git clone https://github.com/XTLS/Xray-core.git . && \
     git checkout $LATEST_VERSION_TAG && \
-    go mod download && \
-    go build -o xray /app/main/
+    go mod download -x && \
+    go build -v -o xray /app/main/
 
 # runner
 FROM alpine:latest AS runner
