--- a/.github/workflows/xray_docker_xhttp_reality.yml
+++ b/.github/workflows/xray_docker_xhttp_reality.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           context: ./xhttp_reality
           file: ./xhttp_reality/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
           tags: |
             wulabing/xray_docker_xhttp_reality:${{env.VERSION}}-ubuntu-22.04-xray-${{env.XRAY_VERSION}}
             wulabing/xray_docker_xhttp_reality:latest
