--- a/xhttp_reality/Dockerfile
+++ b/xhttp_reality/Dockerfile
@@ -7,7 +7,7 @@ LABEL version="0.0.29"
 #ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /app
 
-RUN apk add --no-cache git curl jq && \ 
+RUN apk add --no-cache --no-scripts git curl jq && \ 
     LATEST_VERSION_TAG=$(curl -s https://api.github.com/repos/XTLS/Xray-core/releases | jq -r '.[0].tag_name') && \
     git clone https://github.com/XTLS/Xray-core.git . && \
     git checkout $LATEST_VERSION_TAG && \
@@ -35,7 +35,7 @@ COPY ./config.json /
 
 COPY --from=builder /app/xray /
 
-RUN apk add --no-cache tzdata ca-certificates jq curl libqrencode-tools && \
+RUN apk add --no-cache --no-scripts tzdata ca-certificates jq curl libqrencode-tools && \
     mkdir -p /var/log/xray && \
     wget -O /geosite.dat https://github.com/v2fly/domain-list-community/releases/latest/download/dlc.dat && \
     wget -O /geoip.dat https://github.com/v2fly/geoip/releases/latest/download/geoip.dat && \
